# mish

./: .gitignore  AUDIT.md  COVERAGE.md  Cargo.toml  FUTURE_WORK.md  FUZZING_SUMMARY.md  NEXT_FEATURES.md  NOT_IMPLEMENTING.md  PARITY_AUDIT.md  PERFORMANCE.md  README.md  SECURITY.md  TESTING.md
.github/workflows/: ci.yml
crates/bench-harness/: Cargo.toml  README.md
crates/bench-harness/src/: main.rs
crates/mish/: Cargo.toml
crates/mish-madsim/: Cargo.toml
crates/mish-madsim/src/: lib.rs
crates/mish-madsim/tests/: madsim_fullstack.rs  madsim_sim.rs
crates/mish-quic/: Cargo.toml
crates/mish-quic/examples/: turmoil_latency.rs
crates/mish-quic/src/: config.rs  lib.rs  lossy.rs  transport.rs  turmoil_sim.rs
crates/mish-quic/tests/: auth.rs  datagram_flow.rs  quic_e2e.rs  side_channel.rs  wire_attacks.rs
crates/mish-sim/: Cargo.toml
crates/mish-sim/src/: lib.rs
crates/mish-sim/tests/: turmoil_sim.rs
crates/mish-ssp/: Cargo.toml
crates/mish-ssp/examples/: net_bench.rs  tail_probe.rs
crates/mish-ssp/src/: clock.rs  core.rs  frag.rs  framing.rs  instruction.rs  kani_proofs.rs  lib.rs  memory.rs  session.rs  sim.rs  state.rs  stateright_model.rs  states.rs  transport.rs
crates/mish-ssp/tests/: concurrency.rs  core_unit.rs  fuzz_clock.proptest-regressions  fuzz_clock.rs  fuzz_decode.rs  fuzz_driver_live.rs  fuzz_hostile.proptest-regressions  fuzz_hostile.rs  integration.rs  proptest_ssp.rs  sim_convergence.rs
crates/mish-terminal/: Cargo.toml
crates/mish-terminal/examples/: diff_bench.rs
crates/mish-terminal/src/: display.rs  emulator.rs  history.rs  kani_proofs.rs  lib.rs  notification.rs  predict.rs  render.rs  screen.rs  statusbar.rs  user.rs
crates/mish-terminal/tests/: differential_emulator.proptest-regressions  differential_emulator.rs  display_roundtrip.proptest-regressions  display_roundtrip.rs  emulation_mosh.rs  emulator_test.rs  fuzz_apply.proptest-regressions  fuzz_apply.rs  fuzz_diff.proptest-regressions  fuzz_diff.rs  fuzz_predict.proptest-regressions  fuzz_predict.rs  state_sync.proptest-regressions  state_sync.rs
crates/mish/src/: bootstrap.rs  client.rs  direct.rs  enroll.rs  forward.rs  lib.rs  locale.rs  perf.rs  persist.rs  pty.rs  registry.rs  scrollback.rs  server.rs  trace.rs
crates/mish/tests/: auth_e2e.rs  bootstrap_e2e.rs  client_cli.rs  ctrlc_flood.rs  daemon.rs  direct_e2e.rs  full_stack.rs  handshake_dos.rs  key_hygiene.rs  loopback.rs  mouse_routing.rs  multi_client.rs  perf_log.rs  port_forward.rs  pty_real.rs  real_terminal_reference.rs  reattach.rs  replay.rs  scroll_client.rs  scrollback_anchor.rs  scrollback_deep.rs  scrollback_e2e.rs  server_cli.rs  session_reattach.rs  status_bar.rs  sustained_input.rs  transparency.rs
docs/: direct-connect.md  not-implementing.md  performance.md  port-forwarding.md  roadmap.md  scrollback.md  security.md  testing.md  vte-legacy-color-overflow.md
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: answerback_safety.rs  bootstrap_parse.rs  client_render_safety.rs  diff_roundtrip.rs  differential_emulator.rs  frag_memory_bounds.rs  frag_reassemble.rs  instruction_decode.rs  resized_view.rs  screen_apply.rs  tty_emission_safety.rs  userstream_decode.rs
fuzz/regressions/: README.md
fuzz/regressions/diff_roundtrip/: control-char-title-osc-sanitize  edge-whitespace-title  wide-char-spacer-overwrite-ich
fuzz/regressions/screen_apply/: one-column-wide-glyph-grid-oob  zero-dimension-grid-panic
fuzz/regressions/tty_emission_safety/: title-uri-osc-breakout
fuzz/regressions/userstream_decode/: start-u64-max-add-overflow
perf/: .gitignore  README.md  mosh-paper-reference.json  perf-latency-graph.py
scripts/: fuzz-corpus-snapshot.sh  fuzz-overnight.sh  fuzz-proptest-soak.sh  test-builtin-bootstrap.sh  tsan.sh
