[workspace]
resolver = "2"
members = ["crates/*"]
# The cargo-fuzz crate links libFuzzer and only builds under `cargo fuzz`; keep
# it out of normal workspace builds/tests.
exclude = ["fuzz"]

[workspace.package]
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["mish contributors"]
repository = "https://github.com/example/mish"

[workspace.dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
bytes = "1"
async-trait = "0.1"
thiserror = "2"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
bincode = "1.3"

# dev
proptest = "1"
tokio-test = "0.4"
