[package]
name = "mish-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
mish-ssp = { path = "../crates/mish-ssp" }
mish-terminal = { path = "../crates/mish-terminal" }
mish = { path = "../crates/mish" }
vt100 = "0.16.2"

[[bin]]
name = "instruction_decode"
path = "fuzz_targets/instruction_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "screen_apply"
path = "fuzz_targets/screen_apply.rs"
test = false
doc = false
bench = false

[[bin]]
name = "diff_roundtrip"
path = "fuzz_targets/diff_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "frag_reassemble"
path = "fuzz_targets/frag_reassemble.rs"
test = false
doc = false
bench = false

[[bin]]
name = "userstream_decode"
path = "fuzz_targets/userstream_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "differential_emulator"
path = "fuzz_targets/differential_emulator.rs"
test = false
doc = false
bench = false

# --- security-seam targets ---

[[bin]]
name = "answerback_safety"
path = "fuzz_targets/answerback_safety.rs"
test = false
doc = false
bench = false

[[bin]]
name = "tty_emission_safety"
path = "fuzz_targets/tty_emission_safety.rs"
test = false
doc = false
bench = false

[[bin]]
name = "frag_memory_bounds"
path = "fuzz_targets/frag_memory_bounds.rs"
test = false
doc = false
bench = false

[[bin]]
name = "client_render_safety"
path = "fuzz_targets/client_render_safety.rs"
test = false
doc = false
bench = false

[[bin]]
name = "bootstrap_parse"
path = "fuzz_targets/bootstrap_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "resized_view"
path = "fuzz_targets/resized_view.rs"
test = false
doc = false
bench = false

# Fuzz builds MUST be run with `--release` (see scripts / the 8h launcher). In the
# default (non-release) cargo-fuzz build, `-Cdebug-assertions -Coverflow-checks`
# are forced via RUSTFLAGS and can't be overridden per-package. Under `--release`
# cargo-fuzz adds no such RUSTFLAGS, so these profile settings govern: we turn
# debug-assertions + overflow-checks back ON for everything (matching the normal
# fuzz build's bug-finding strength) …
[profile.release]
debug-assertions = true
overflow-checks = true

# … and OFF for vte only, to stop the known upstream legacy-color overflow panic
# (vte 0.15 ansi.rs:219) from spamming crash artifacts during campaigns. It is a
# documented non-bug (see ../vte-legacy-color-overflow.md), not a real finding;
# ASan stays on for vte, so genuine memory bugs there are still caught. Drop this
# once a fixed vte ships.
[profile.release.package.vte]
debug-assertions = false
overflow-checks = false
