[package]
name = "mish-ssp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "State Synchronization Protocol (SSP) core for mish: a sans-IO, diff-based state sync engine over unreliable datagrams."

[dependencies]
tokio = { workspace = true, features = ["io-util"] }
bytes = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
flate2 = { version = "1.1.9", default-features = false, features = ["zlib-rs"] }

[dev-dependencies]
proptest = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
