[package]
name = "mish-ssp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "State Synchronization Protocol (SSP) core for mish: a sans-IO, diff-based state sync engine over unreliable datagrams."

[dependencies]
tokio = { workspace = true, features = ["io-util"] }
bytes = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
flate2 = { version = "1.1.9", default-features = false, features = ["zlib-rs"] }
# Pure-Rust deflate backend used *only* under `cfg(miri)` (see `instruction.rs`):
# zlib-rs's hand-rolled allocator isn't Miri-clean. Unused in normal builds (and
# dead-code-eliminated from release binaries); Cargo can't gate a dep on cfg(miri).
miniz_oxide = "0.8"

[dev-dependencies]
stateright = "0.31"
proptest = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }

# `cargo kani` builds with `--cfg kani`; register it so the `#[cfg(kani)]` proof
# module doesn't trip `unexpected_cfgs` under the workspace's `-D warnings`.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
