[package]
name = "mish"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "mish client and server binaries: a roaming, low-latency remote shell over QUIC."
default-run = "mish-server"

[features]
default = ["multi-client"]
# Shared multi-client sessions: `mish-server --shared` lets several clients
# attach to one session at once (one read-write owner + read-only viewers,
# NEXT_FEATURES.md #3). Off → the `--shared` flag is rejected and the server
# only ever serves a single client at a time. Opt out for a minimal,
# single-client-only build (`--no-default-features`).
multi-client = []

[dependencies]
mish-ssp = { path = "../mish-ssp" }
mish-quic = { path = "../mish-quic" }
mish-terminal = { path = "../mish-terminal" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time", "io-util", "io-std", "signal", "process", "net"] }
bytes = { workspace = true }
async-trait = { workspace = true }
# Port-forwarding control messages (StreamHello / ForwardAck) — same bincode/serde
# framing as the history side-channel.
serde = { workspace = true }
bincode = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# binary-only I/O deps
portable-pty = "0.9"
crossterm = "0.29"
anyhow = "1"
# Built-in, pure-Rust SSH client for the `--bootstrap=built-in` transport (no
# external `ssh` needed; the path toward a Windows mish). `ring` backend to
# match the rest of the workspace and stay off aws-lc-rs's C toolchain. The
# default ssh-key `encryption` feature (passphrase-protected OpenSSH keys) is
# already pinned by russh, so no extra feature is needed for that.
russh = { version = "0.61", default-features = false, features = ["ring", "flate2", "rsa"] }
# Pure-Rust ~/.ssh/config parser (Host/HostName/Port/User/IdentityFile/ProxyJump,
# wildcards) for the builtin bootstrap, from the russh project. (ssh2-config is
# more featureful but drags in a `git2` build-dep → libgit2/openssl/libssh2 C
# libraries, which would break the no-C Windows goal.)
russh-config = "0.58"
# No-echo passphrase/password prompt for the builtin bootstrap; unix + windows,
# no C libraries (libc / windows-sys FFI only).
rpassword = "7.5"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
proptest = { workspace = true }
# Independent reference emulator for the real-PTY differential harness.
vt100 = "0.16.2"

[[bin]]
name = "mish-server"
path = "src/bin/mish-server.rs"

[[bin]]
name = "mish-client"
path = "src/bin/mish-client.rs"
